k8s/network-policies/api.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: api
  name: api
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
  containers:
  - image: ghcr.io/stefanprodan/podinfo:6.1.6
    imagePullPolicy: Always
    name: api
    ports:
    - containerPort: 9898
      protocol: TCP
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop:
          - ALL
      readOnlyRootFilesystem: true
      runAsNonRoot: true
      runAsUser: 1000
      runAsGroup: 1000
      seccompProfile:
        type: RuntimeDefault
