k8s/network-policies/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  containers:
  - image: nginx
    imagePullPolicy: Always
    name: frontend
    ports:
    - containerPort: 80
      protocol: TCP
