k8s/network-policies/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: api
  type: ClusterIP
