k8s/network-policies/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello
  name: hello-service
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello
