k8s/network-policies/allow-ingress-api-from-frontend.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-api-from-frontend
spec:
  podSelector:
  policyTypes:
    - Ingress
  ingress:
